Refaktor, poprawki, testy